--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^5.4.2",
     "dotenv": "^16.3.1",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
@@ -23,6 +25,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
+    "prisma": "^5.4.2",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
