--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^5.4.2",
+    "cloudinary": "^1.41.0",
     "dotenv": "^16.3.1",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
+    "next-cloudinary": "^4.28.0",
     "react": "^18",
     "react-dom": "^18"
   },
