added toast notifications

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,8 @@ GOOGLE_CLIENT_ID=****************-raf**************************2p.apps.googleuse
 GOOGLE_CLIENT_SECRET=GOCSPX-***********************
 NEXTAUTH_URL=http://localhost:****
 NEXTAUTH_SECRET=************************************
-DATABASE_URL="mongodb+srv://matthew*****xnx:3YC0cxxxxxDzmSw@cluster0.xxxxxx.mongodb.net/nextjs13-blog?retryWrites=true&w=majority"
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="<Your Cloud Name>"
+DATABASE_URL="mongodb+srv://matthew*****xnx:3YxxxxxxxxDzmSw@cluster0.xxxxxx.mongodb.net/nextjs13-blog?retryWrites=true&w=majority"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="xxxxxxxxx"
+CLOUDINARY_API_KEY=87xxxxxxxxxxxx57
+CLOUDINARY_API_SECRET=xdxxxxxxxxxxxxxxxxL29qs
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=xxxxxxxxx
