--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-auth": "^4.23.2",
     "next-cloudinary": "^4.28.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
